# AlphaAgent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: daily-analysis.yml  telegram-bot.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
data/: stock_analyzer.db
docs/: MIGRATION.md
specs/001-llm-stock-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
specs/001-llm-stock-analyzer/checklists/: requirements.md
specs/001-llm-stock-analyzer/contracts/: cli.md  library.md  telegram.md
specs/002-personal-telegram-stocks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-personal-telegram-stocks/checklists/: requirements.md
specs/002-personal-telegram-stocks/contracts/: cli.md  deliverer.md  storage.md
src/scripts/: daily_analysis.py  run_bot.py
src/stock_analyzer/: __init__.py  analyzer.py  bot.py  cli.py  config.py  deliverer.py  exceptions.py  fetcher.py  llm_client.py  logging.py  models.py  retry.py  storage.py
tests/contract/: test_analyzer_contract.py  test_cli_contract.py  test_config_contract.py  test_deliverer_contract.py  test_history_contract.py  test_telegram_contract.py
tests/integration/: test_end_to_end.py  test_llm_integration.py  test_stock_data_integration.py  test_telegram_integration.py
tests/unit/: test_analyzer_parsing.py  test_config.py  test_deliverer.py  test_fetcher.py  test_llm_client.py  test_logging.py  test_retry.py  test_storage.py  test_storage_history.py  test_subscriptions.py
